--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -2,7 +2,8 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Noto Serif, Roboto, Helvetica, Arial, sans-serif;
+    font-family: Fira Code;
+    font-weight: bold;
     font-size: 16px;
     min-height: 25px;
 }
