sway: Modify waybar to be compatible with hyprland
Also move it to its own directory as it is not strictly a part of sway
anymore.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -57,6 +57,11 @@ window#waybar.chromium {
     border-bottom: 3px solid #ffffff;
 }
 
+#workspaces button.active {
+    background-color: #64727D;
+    border-bottom: 3px solid #ffffff;
+}
+
 #workspaces button.urgent {
     background-color: #eb4d4b;
 }
