sway: Update waybar modules
- Move tray to the middle of the screen. It's a nicer place to spot
  "notifications" like Slack's (eg red circle for unread message). It
  also prevents the tray from moving around the modules on the right as
  background apps open/close.
- Replaces the pulseaudio module with the wireplumber one. The
  wireplumber module is the "native" way to handle pipewire, while
  pulseaudio would go through pipewire's pulseaudio compatibility layer.
- Remove CPU and memory modules. They're not really useful so let's not
  have clutter on the bar.

--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -74,6 +74,7 @@ window#waybar.chromium {
 #backlight,
 #network,
 #pulseaudio,
+#wireplumber,
 #custom-temperature,
 #custom-media,
 #tray,
@@ -142,6 +143,7 @@ label:focus {
     background-color: #f53c3c;
 }
 
+#wireplumber,
 #pulseaudio {
     background-color: #f1c40f;
     color: #000000;
